Configure for GitHub Pages deployment

--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "gina-hw-cardio",
   "version": "1.0.0",
+  "homepage": "https://Ripnrip.github.io/Nurse-Practitioner-CV-Disorders",
   "main": "Artifact.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "",
@@ -32,6 +35,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.0"
   },
