Complete visual enhancements for CV Disorders Part 1 and Part 2

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     ]
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "pdfjs-dist": "^5.1.91",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
